syntax = "proto3";

package QS.Cloud.Core;

service BaseManagement{
	rpc GetBasesForUser (GetBasesForUserRequest) returns (GetBasesForUserResponse);
	rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest{
	int32 base_id = 1;
}

message LoginResponse{
	bool success = 1;
	string description = 2;
	string session_id = 3;
	bool is_admin = 4;
	BaseConnectionString db = 5;
	
}

message GetBasesForUserRequest{
}

message GetBasesForUserResponse{
	repeated BaseInfo bases = 1;
}

message BaseConnectionString{
	string login = 1;
	string password = 2;
	string server = 3;
	string base_name = 4;
	string port = 5;
}

message BaseInfo{
	int32 base_id = 1;
	string base_title = 2;
}
